<?xml version="1.0" encoding="utf-8"?>
<!--
ST31 Androidサンプル12 shopsアプリ
res/values/string.xmlファイル
-->
<resources>
    <string name="app_name">お気に入り店</string>
    <string name="action_settings">Settings</string>
    <!-- リスト画面用 -->
    <string name="tv_title_list">お気に入り店</string>
    <string name="btn_new">新規</string>
    <!-- 編集画面用 -->
    <string name="tv_name_edit">ショップ情報編集</string>
    <string name="tv_name_insert">ショップ情報登録</string>
    <string name="tv_input_name">店名:</string>
    <string name="tv_input_tel">Tel:</string>
    <string name="tv_input_url">URL:</string>
    <string name="tv_input_note">メモ:</string>
    <string name="btn_save">更新</string>
    <string name="btn_insert">登録</string>
    <string name="btn_back">戻る</string>
    <string name="btn_delete">削除</string>
    <string name="msg_input_name">タイトルを入力してください。</string>

    <string name="dlg_simple_msg">本当に削除しますか？</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="dlg_btn_ng">キャンセル</string>
   <string name="dlg_simple_toast">削除しました</string>

<!--    <string name="menu_reset">リセット</string>-->
<!--    <string name="menu_fonttype">フォント</string>-->
<!--    <string name="menu_fonttype_serif">明朝体</string>-->
<!--    <string name="menu_fonttype_sansserif">ゴシック体</string>-->
<!--    <string name="menu_fonttype_monospace">等幅</string>-->
<!--    <string name="menu_fontstyle">字体</string>-->
<!--    <string name="menu_fontstyle_normal">標準</string>-->
<!--    <string name="menu_fontstyle_italic">斜体</string>-->
<!--    <string name="menu_fontstyle_bold">太字</string>-->
<!--    <string name="menu_fontstyle_bolditalic">斜体太字</string>-->
</resources>