<?xml version="1.0" encoding="utf-8" ?>
<!--
ST31 Androidサンプル14 オプションメニュー
res/menu/menu_options/activity_main.xmlファイル
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnBack"
        android:icon="@android:drawable/ic_menu_revert"
        android:onClick="onBackButtonClick"
        android:title="@string/btn_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:onClick="onDeleteButtonClick"
        android:title="@string/btn_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnNew"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/btn_new"
        app:showAsAction="always" />
    <item
        android:id="@+id/btnSave"
        android:icon="@android:drawable/ic_menu_save"
        android:onClick="onSaveButtonClick"
        android:title="@string/btn_save"
        app:showAsAction="always" />
</menu>